# AmethystRenderingEngine

./: .gitignore  pyproject.toml
res/scenes/Antique Camera/: antiqueCamera.gltf
res/scenes/Car/: car.gltf
res/scenes/Cerberus/: cerberus.gltf
res/scenes/Hierarchy Test Scene/: hierarchyTestScene.gltf
res/scenes/Materials Test Scene/: materialsTestScene.gltf
res/scenes/Monkey/: monkey.gltf
res/scenes/Primitives Test Scene/: primitivesTestScene.gltf
res/scenes/Roughness Metallic/: roughnessMetallic.gltf
res/scenes/Scifi Helmet/: scifiHelmet.gltf
res/scenes/Shiny Metal/: shinyMetal.gltf
res/scenes/Test Scene/: testScene.gltf
res/scenes/Textures Test Scene/: texturesTestScene.gltf
res/scenes/Transforms Test Scene/: transformsTestScene.gltf
shaders/: basicFragmentShader.glsl  basicVertexShader.glsl  brdfLookupTableFragmentShader.glsl  diffuseIrradianceConvolutionFragmentShader.glsl  equirectengularToCubemapFragmentShader.glsl  equirectengularToCubemapVertexShader.glsl  passThroughVertexShader.glsl  pbrFragmentShader.glsl  skyBoxFragmentShader.glsl  skyBoxVertexShader.glsl  specularPrefilteringFragmentShader.glsl
src/: app.py  camera.py  color.py  colorSpace.py  controller.py  core.py  cubemap.py  debug.py  environment.py  environmentMap.py  gltfLoader.py  image.py  main.py  material.py  materials.py  mesh.py  object.py  scene.py  shaderProgram.py  texture.py  transform.py  window.py
