[project]
name = "shadowrendering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glfw>=2.9.0",
    "moderngl>=5.12.0",
    "numpy>=2.3.1",
    "pyglm>=2.8.2",
    "pygltflib>=1.16.4",
    "pyobjloader>=0.0.7",
    "pyopengl>=3.1.9",
]
